--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
     "coffee-script": "1.12.4",
     "mocha": "~3.2.0",
     "mocha-phantomjs": "~4.1.0",
+    "sake-bundle": "0.4.11",
+    "sake-cli": "0.3.2",
+    "sake-core": "1.3.7",
+    "sake-outdated": "0.1.20",
+    "sake-publish": "0.1.12",
+    "sake-version": "0.1.18",
     "shortcake": "1.2.7",
     "should": "~11.2.1",
     "zuul": "~3.11.1"
