--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "es-xhr-promise",
   "version": "1.2.14",
-  "description": "Module-friendly fork of [xhr-promoise](https://github.com/scottbrady/xhr-promise). Wrap the XMLHttpRequest object with Promise/A+ compliant promises.",
+  "description": "Module-friendly fork of xhr-promoise. Wrap the XMLHttpRequest object with Promise/A+ compliant promises.",
   "author": "Zach Kelling <z@zeekay.io>",
   "keywords": [
     "xmlhttprequest",
@@ -20,9 +20,8 @@
     "type": "git",
     "url": "git://github.com/zeekay/es-xhr-promise"
   },
-  "main": "dist/lib.js",
-  "module": "dist/lib.mjs",
-  "js:next": "dist/lib.mjs",
+  "main": "lib/es-xhr-promise.js",
+  "module": "lib/es-xhr-promise.mjs",
   "engines": {
     "node": "*"
   },
@@ -33,7 +32,7 @@
   },
   "homepage": "https://github.com/zeekay/es-xhr-promise",
   "files": [
-    "dist/",
+    "lib/",
     "src/"
   ],
   "dependencies": {
@@ -41,11 +40,6 @@
     "es-object-assign": "4.1.3"
   },
   "devDependencies": {
-    "cake-bundle": "0.2.17",
-    "cake-outdated": "0.1.16",
-    "cake-publish": "0.1.10",
-    "cake-test": "0.1.0",
-    "cake-version": "0.1.14",
     "coffee-script": "1.12.4",
     "mocha": "~3.2.0",
     "mocha-phantomjs": "~4.1.0",
@@ -54,13 +48,15 @@
     "sake-core": "1.3.7",
     "sake-outdated": "0.1.20",
     "sake-publish": "0.1.12",
+    "sake-test": "0.1.4",
     "sake-version": "0.1.18",
-    "shortcake": "1.2.7",
     "should": "~11.2.1",
     "zuul": "~3.11.1"
   },
   "scripts": {
-    "prepublishOnly": "cake build",
+    "build": "sake build",
+    "pretest": "sake build",
+    "prepublishOnly": "sake build",
     "test": "grunt test",
     "zuul": "zuul -- ./test/cases/*_test.js"
   }
