--- a/package.json
+++ b/package.json
@@ -36,20 +36,19 @@
     "src/"
   ],
   "dependencies": {
-    "broken": "0.1.13",
-    "es-object-assign": "4.1.4"
+    "broken": "^0.1.13",
+    "es-object-assign": "^4.1.4"
   },
   "devDependencies": {
     "coffee-script": "1.12.5",
     "mocha": "~3.3.0",
     "mocha-phantomjs": "~4.1.0",
-    "sake-bundle": "0.5.1",
-    "sake-cli": "0.5.6",
-    "sake-core": "1.4.6",
-    "sake-outdated": "0.1.27",
-    "sake-publish": "0.1.16",
-    "sake-test": "0.1.5",
-    "sake-version": "0.1.19",
+    "sake-bundle": "^0.5.1",
+    "sake-cli": "^0.5.6",
+    "sake-outdated": "^0.1.27",
+    "sake-publish": "^0.1.16",
+    "sake-test": "^0.1.5",
+    "sake-version": "^0.1.19",
     "should": "~11.2.1",
     "zuul": "~3.11.1"
   },
